clusters/cluster0/kubernetes/apps/media/lidarr/app/lidarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lidarr
  name: lidarr
  namespace: media
spec:
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: control-00
      containers:
        - image: ghcr.io/hotio/lidarr:pr-plugins
          imagePullPolicy: Always
          name: lidarr
          ports:
          - name: lidarr-port
            containerPort: 8686
            protocol: TCP
          volumeMounts:
          - name: lidarr-config
            mountPath: /config
          - name: lidarr-media
            mountPath: /music
          resources:
            requests:
              memory: 3Gi
              cpu: 500m
            limits:
              memory: 3Gi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: lidarr-config
        persistentVolumeClaim:
          claimName: "lidarr-config"
      - name: lidarr-media
        persistentVolumeClaim:
          claimName: "media-pvc"
  selector:
    matchLabels:
      app: lidarr
