clusters/cluster0/kubernetes/apps/media/lidarr/app/lidarr-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: media
spec:
  hostnames:
  - lidarr.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: cert-manager
  rules:
  - backendRefs:
    - name: lidarr-service
      port: 8686
    matches:
    - path:
        type: PathPrefix
        value: /
